force-app/main/default/objects/Lead/fields/Ad_Code__c.field-meta.xml
<CustomField>
    <fullName>Ad_Code__c</fullName>
    <label>Ad Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0001 - A Class Exhibitions</fullName>
            </value>
            <value>
                <fullName>1001 - A Class Exhibitions – Old</fullName>
            </value>
            <value>
                <fullName>0109 - Brand Media</fullName>
            </value>
            <value>
                <fullName>0004 - Certificated Sites</fullName>
            </value>
            <value>
                <fullName>0062 - Club Enquiries – Recruitment Book3</fullName>
            </value>
            <value>
                <fullName>0088 - Club Services</fullName>
            </value>
            <value>
                <fullName>0102 - Club Sites Literature</fullName>
            </value>
            <value>
                <fullName>0006 - DA Recruitment</fullName>
            </value>
            <value>
                <fullName>0000 - Dealers</fullName>
            </value>
            <value>
                <fullName>0010 - Dealers (Millers Shops)</fullName>
            </value>
            <value>
                <fullName>0014 - Dealers (Outdoor Ltd/Scout Shops)</fullName>
            </value>
            <value>
                <fullName>0015 - Dealers (YHA Shops)</fullName>
            </value>
            <value>
                <fullName>0070 - Direct Mail</fullName>
            </value>
            <value>
                <fullName>0054 - Employee Members</fullName>
            </value>
            <value>
                <fullName>0031 - Enquirer Follow-ups</fullName>
            </value>
            <value>
                <fullName>0103 - Franchise Member Recruitment</fullName>
            </value>
            <value>
                <fullName>0003 - General Membership Codes</fullName>
            </value>
            <value>
                <fullName>0030 - Gift Memberships</fullName>
            </value>
            <value>
                <fullName>0049 - Internet</fullName>
            </value>
            <value>
                <fullName>0055 - Journalists</fullName>
            </value>
            <value>
                <fullName>0106 - Media Advertising 2010</fullName>
            </value>
            <value>
                <fullName>1002 - Membership Advertising – Old</fullName>
            </value>
            <value>
                <fullName>0009 - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>1006 - Miscellaneous Archive</fullName>
            </value>
            <value>
                <fullName>0079 - NCCW Archive</fullName>
            </value>
            <value>
                <fullName>0064 - Overseas Recruitment</fullName>
            </value>
            <value>
                <fullName>0011 - Partnerships/Offer Recruitment</fullName>
            </value>
            <value>
                <fullName>0007 - Pro Advertising</fullName>
            </value>
            <value>
                <fullName>0008 - Pro Shows</fullName>
            </value>
            <value>
                <fullName>1005 - Pro’s Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>