force-app/main/default/objects/Lead/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telephone</fullName>
                <default>true</default>
                <label>Telephone</label>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>