force-app/main/default/objects/Lead/fields/Associate_Member_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Associate_Member_Date_of_Birth__c</fullName>
    <label>Associate Member Date of Birth</label>
    <type>Date</type>
</CustomField>