force-app/main/default/objects/Lead/fields/Associate_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Associate_Member_First_Name__c</fullName>
    <label>Associate Member First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>