force-app/main/default/objects/Lead/fields/Associate_Member_Surname__c.field-meta.xml
<CustomField>
    <fullName>Associate_Member_Surname__c</fullName>
    <label>Associate Member Surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>