force-app/main/default/objects/Lead/fields/Camping_Unit__c.field-meta.xml
<CustomField>
    <fullName>Camping_Unit__c</fullName>
    <label>Camping Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caravan</fullName>
            </value>
            <value>
                <fullName>Camper Van</fullName>
            </value>
            <value>
                <fullName>Motorhome</fullName>
            </value>
            <value>
                <fullName>Tent</fullName>
            </value>
            <value>
                <fullName>Trailer Tent / Folding Camper</fullName>
            </value>
            <value>
                <fullName>Folding Caravan</fullName>
            </value>
            <value>
                <fullName>Twin Axle Caravan</fullName>
            </value>
            <value>
                <fullName>Fifth Wheeler</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
                <label>RV Motorhome</label>
            </value>
            <value>
                <fullName>Roof Top Tent</fullName>
            </value>
            <value>
                <fullName>No Unit Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>