force-app/main/default/objects/Lead/fields/Campsite__c.field-meta.xml
<CustomField>
    <fullName>Campsite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campsite</label>
    <referenceTo>Campsite__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>