force-app/main/default/objects/Lead/fields/Child_1_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Date_of_Birth__c</fullName>
    <label>Child 1 Date of Birth</label>
    <type>Date</type>
</CustomField>