force-app/main/default/objects/Lead/fields/Child_1_Surname__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Surname__c</fullName>
    <label>Child 1 Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>