force-app/main/default/objects/Lead/fields/Child_3_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Date_of_Birth__c</fullName>
    <label>Child 3 Date of Birth</label>
    <type>Date</type>
</CustomField>