force-app/main/default/objects/Lead/fields/Child_3_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_3_First_Name__c</fullName>
    <label>Child 3 First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>