force-app/main/default/objects/Lead/fields/Child_3_Surname__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Surname__c</fullName>
    <label>Child 3 Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>