force-app/main/default/objects/Lead/fields/Child_3_Title__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Title__c</fullName>
    <label>Child 3 Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>