force-app/main/default/objects/Lead/fields/Count_number_of_children__c.field-meta.xml
<CustomField>
    <fullName>Count_number_of_children__c</fullName>
    <formula>If(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 NOT(ISBLANK( Child_2_First_Name__c )),
 NOT(ISBLANK( Child_3_First_Name__c )),
 NOT(ISBLANK( Child_4_First_Name__c )),
 NOT(ISBLANK( Child_5_First_Name__c )),
 NOT(ISBLANK( Child_6_First_Name__c ))
),
 6,
IF(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 NOT(ISBLANK( Child_2_First_Name__c )),
 NOT(ISBLANK( Child_3_First_Name__c )),
 NOT(ISBLANK( Child_4_First_Name__c )),
 NOT(ISBLANK( Child_5_First_Name__c )),
 ISBLANK( Child_6_First_Name__c )
),
5,
IF(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 NOT(ISBLANK( Child_2_First_Name__c )),
 NOT(ISBLANK( Child_3_First_Name__c )),
 NOT(ISBLANK( Child_4_First_Name__c )),
 ISBLANK( Child_5_First_Name__c ),
 ISBLANK( Child_6_First_Name__c )
),
4,
IF(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 NOT(ISBLANK( Child_2_First_Name__c )),
 NOT(ISBLANK( Child_3_First_Name__c )),
 ISBLANK( Child_4_First_Name__c ),
 ISBLANK( Child_5_First_Name__c ),
 ISBLANK( Child_6_First_Name__c )
),
3,
IF(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 NOT(ISBLANK( Child_2_First_Name__c )),
 ISBLANK( Child_3_First_Name__c ),
 ISBLANK( Child_4_First_Name__c ),
 ISBLANK( Child_5_First_Name__c ),
 ISBLANK( Child_6_First_Name__c )
),
2,
IF(
 AND(
 NOT(ISBLANK( Child_1_First_Name__c )),
 ISBLANK( Child_2_First_Name__c ),
 ISBLANK( Child_3_First_Name__c ),
 ISBLANK( Child_4_First_Name__c ),
 ISBLANK( Child_5_First_Name__c ),
 ISBLANK( Child_6_First_Name__c )
),
1,
0
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count number of children</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>