force-app/main/default/objects/Lead/fields/Existing_Members_Number__c.field-meta.xml
<CustomField>
    <fullName>Existing_Members_Number__c</fullName>
    <label>Existing Member&apos;s Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>