force-app/main/default/objects/Lead/fields/Existing_Membership_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Membership_Name__c</fullName>
    <label>Existing Membership Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>