force-app/main/default/objects/Lead/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <label>Gift</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Club Site Voucher</fullName>
            </value>
            <value>
                <fullName>Foldable Camping Chair</fullName>
                <label>RAF - Camping Chair</label>
            </value>
            <value>
                <fullName>Golf Umbrella</fullName>
                <label>RAF - Umbrella</label>
            </value>
            <value>
                <fullName>Insulated Picnic Bag</fullName>
                <label>RAF - Cooler Bag</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>