force-app/main/default/objects/Lead/fields/hasAssociate__c.field-meta.xml
<CustomField>
    <fullName>hasAssociate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Associate?</label>
    <type>Checkbox</type>
</CustomField>