force-app/main/default/objects/Lead/fields/hasPartner__c.field-meta.xml
<CustomField>
    <fullName>hasPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Partner?</label>
    <type>Checkbox</type>
</CustomField>