force-app/main/default/objects/Lead/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height (m)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>