force-app/main/default/objects/Lead/fields/Join_Fee_8_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Join_Fee_8_Weeks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Join Fee 8 Weeks</label>
    <type>Checkbox</type>
</CustomField>