force-app/main/default/objects/Lead/fields/Joining_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Joining_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joining Fee Waived</label>
    <type>Checkbox</type>
</CustomField>