force-app/main/default/objects/Lead/fields/Kit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Kit_Issued__c</fullName>
    <label>Membership Pack Issued</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>