force-app/main/default/objects/Lead/fields/Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Date__c</fullName>
    <label>Lead Date</label>
    <type>Date</type>
</CustomField>