force-app/main/default/objects/Lead/fields/Lead_Member_Age__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Age__c</fullName>
    <label>Lead Member Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>