force-app/main/default/objects/Lead/fields/Lead_Member_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Date_of_Birth__c</fullName>
    <label>Lead Member Date of Birth</label>
    <type>Date</type>
</CustomField>