force-app/main/default/objects/Lead/fields/Lead_Member_Online_Account__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Online_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Member Online Account</label>
    <type>Checkbox</type>
</CustomField>