force-app/main/default/objects/Lead/fields/Lead_Member_Surname__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Surname__c</fullName>
    <label>Lead Member Surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>