force-app/main/default/objects/Lead/fields/Lead_Member_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Member_Title__c</fullName>
    <label>Lead Member Title</label>
    <length>10</length>
    <type>Text</type>
</CustomField>