force-app/main/default/objects/Lead/fields/Lead_Step__c.field-meta.xml
<CustomField>
    <fullName>Lead_Step__c</fullName>
    <formula>CASE( LeadStep__c , 
1, &quot;1: Check Existing&quot;, 
2, &quot;2: Create Membership&quot;,
3,&quot;3: Member Details&quot;,
4,&quot;4: Camping Unit&quot;,
5,&quot;5: Sections&quot;,
6,&quot;6: MGM&quot;,
7,&quot;7: Payment&quot;,
&quot;Unknown&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Step</label>
    <type>Text</type>
</CustomField>