force-app/main/default/objects/Lead/fields/LeadStep__c.field-meta.xml
<CustomField>
    <fullName>LeadStep__c</fullName>
    <defaultValue>1</defaultValue>
    <label>LeadStep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>