force-app/main/default/objects/Lead/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length (m)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>