force-app/main/default/objects/Lead/fields/Length_of_Stay_Days__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay_Days__c</fullName>
    <label>Length of Stay (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>