force-app/main/default/objects/Lead/fields/Max_LeadStep__c.field-meta.xml
<CustomField>
    <fullName>Max_LeadStep__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Max LeadStep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>