force-app/main/default/objects/Lead/fields/Membership_Code__c.field-meta.xml
<CustomField>
    <fullName>Membership_Code__c</fullName>
    <label>Membership Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>