force-app/main/default/objects/Lead/fields/Overseas_Membership__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overseas Membership?</label>
    <type>Checkbox</type>
</CustomField>