force-app/main/default/objects/Lead/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>Debit/Credit Card</fullName>
            </value>
            <value>
                <fullName>Cash/Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>