force-app/main/default/objects/Lead/fields/Referral_Detail__c.field-meta.xml
<CustomField>
    <fullName>Referral_Detail__c</fullName>
    <label>Referral Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Referral_Method__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Camping Magazine</fullName>
            </value>
            <value>
                <fullName>MMM</fullName>
            </value>
            <value>
                <fullName>Caravan Magazine</fullName>
            </value>
            <value>
                <fullName>Which Motorhome</fullName>
            </value>
            <value>
                <fullName>Campervan Magazine</fullName>
            </value>
            <value>
                <fullName>Practical Caravan</fullName>
            </value>
            <value>
                <fullName>Practical Motorhome</fullName>
            </value>
            <value>
                <fullName>Britain Magazine</fullName>
            </value>
            <value>
                <fullName>BBC Countryfile Magazine</fullName>
            </value>
            <value>
                <fullName>Discover Touring</fullName>
            </value>
            <value>
                <fullName>Magazine Insert</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>UKCampsite Website</fullName>
            </value>
            <value>
                <fullName>Out and About Website</fullName>
            </value>
            <value>
                <fullName>Caravan Site Finder Website</fullName>
            </value>
            <value>
                <fullName>Motorhome and Caravan Show NEC October</fullName>
            </value>
            <value>
                <fullName>Scottish Caravan and Outdoor Leisure Show SECC February</fullName>
            </value>
            <value>
                <fullName>The Motorhome Caravan and Camping Show NEC February</fullName>
            </value>
            <value>
                <fullName>BBC Gardeners World Show</fullName>
            </value>
            <value>
                <fullName>The National Motorhome Show Peterborough</fullName>
            </value>
            <value>
                <fullName>The South Coast Caravan and Motorhome Show Romsey</fullName>
            </value>
            <value>
                <fullName>Great Yorkshire Motorhome and Caravan Show</fullName>
            </value>
            <value>
                <fullName>Caravan and Motorhome Show Newark</fullName>
            </value>
            <value>
                <fullName>The Southern Motorhome Show Newbury</fullName>
            </value>
            <value>
                <fullName>UK Summer Motorhome Show</fullName>
            </value>
            <value>
                <fullName>The MMM Midlands Motorhome Sale</fullName>
            </value>
            <value>
                <fullName>Western Motorhome Show</fullName>
            </value>
            <value>
                <fullName>Lawns Show</fullName>
            </value>
            <value>
                <fullName>Motorhome and RV Show Shepton</fullName>
            </value>
            <value>
                <fullName>The Motorhome Show Season Finale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>