force-app/main/default/objects/Lead/fields/Referral_Method__c.field-meta.xml
<CustomField>
    <fullName>Referral_Method__c</fullName>
    <label>Referral Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>National Show or Exhibition</fullName>
            </value>
            <value>
                <fullName>Local Show</fullName>
            </value>
            <value>
                <fullName>Travel Services Brochure</fullName>
            </value>
            <value>
                <fullName>Recommended by a retailer dealer certificated site</fullName>
            </value>
            <value>
                <fullName>Introduce a Friend</fullName>
            </value>
            <value>
                <fullName>Recommended by a friend or relative</fullName>
            </value>
            <value>
                <fullName>Used to be a member</fullName>
            </value>
            <value>
                <fullName>Freedom to Go</fullName>
            </value>
            <value>
                <fullName>Insert received with a Site booking</fullName>
            </value>
            <value>
                <fullName>Visit Scotland Promotion</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Guides</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>District Association</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>