force-app/main/default/objects/Lead/fields/Referring_Member__c.field-meta.xml
<CustomField>
    <fullName>Referring_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Memberships</relationshipLabel>
    <relationshipName>New_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>