force-app/main/default/objects/Lead/fields/Secondary_Member_Age__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Age__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Secondary_Member_Date_of_Birth__c) - 
IF( 
OR ( 
MONTH(TODAY()) &lt; MONTH(Secondary_Member_Date_of_Birth__c), 
AND( 
MONTH(TODAY()) == MONTH(Secondary_Member_Date_of_Birth__c), 
DAY(TODAY()) &lt; DAY(Secondary_Member_Date_of_Birth__c) 
) 
), 
1, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Member Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>