force-app/main/default/objects/Lead/fields/Secondary_Member_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Date_of_Birth__c</fullName>
    <label>Secondary Member Date of Birth</label>
    <type>Date</type>
</CustomField>