force-app/main/default/objects/Lead/fields/Secondary_Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Email__c</fullName>
    <label>Secondary Member Email</label>
    <type>Email</type>
</CustomField>