force-app/main/default/objects/Lead/fields/Secondary_Member_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_First_Name__c</fullName>
    <label>Secondary Member First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>