force-app/main/default/objects/Lead/fields/Secondary_Member_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Mobile_Number__c</fullName>
    <label>Secondary Member Mobile Number</label>
    <type>Phone</type>
</CustomField>