force-app/main/default/objects/Lead/fields/Secondary_Member_Online_Account__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Online_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Member Online Account</label>
    <type>Checkbox</type>
</CustomField>