force-app/main/default/objects/Lead/fields/Secondary_Member_Surname__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Member_Surname__c</fullName>
    <label>Secondary Member Surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>